java 16 added. RadioButtonInterface improved